# my-assistant

./: .gitignore  App.py  README.md  cheetsheet.ipynb  labeling.ipynb  pyproject.toml  streaming.ipynb
.cache/embeddings/transaction_history/: 000604df-c3d6-52b4-989b-a4499752bd42  000647ce-76a7-5f4f-9845-6e3bdd45a779  001459df-92be-5918-bbdb-f9c5864cd867  0016dcc4-6d3e-5026-b9a4-6bb60b4e979d  0083bed5-a9b1-5494-bda6-11f9325a94a1  00b3db13-a7c6-5ca2-892f-14657e8648e9  00bd9068-2418-5cd3-b0fd-7d6c3c40f8d7  00bddf76-f0dd-5d08-8c0a-c312bca14ff7  00fb91bc-51a5-53df-8a2c-3bc59618870e  0154eeb7-17c0-5873-9bc2-ce4eb6f56b20  019644a5-f667-50cc-8672-c8ce988b9a0c  01d34e16-7a5c-51df-ad9d-91dd88edfbd0  01d97e0e-4bae-5917-b95a-48099a0a263e  0228c4ad-9eaa-5304-8af5-91a4d47de70d  027dd2a9-215e-5267-adc1-a2f7246eda49  02c483a8-9e5a-5df8-8be5-6dc9a8322d28  02e3d587-9985-5a4f-a741-fbfe529153f1  0352dbb5-32c3-55d5-92ab-6ec2de95a704  0369dd2b-822a-511c-afd8-b4838f36c716  03caf10b-4e67-5fad-ad5b-f4b12cabc868  043cd2da-c31d-50c1-8e17-860e8a54436d  04402bb6-7852-580b-b073-d11c40de0029  048b9af9-671d-5844-8989-81541ffeaadd  0587f4df-046b-519a-9fac-57af9510e946  05b137be-1ce0-5b15-b3c8-11da42fd4399  05b7aa7d-bad5-5e1f-bd71-c7a7bedacaec  05b9944b-a139-51f9-81c2-69144db34b0f  06413340-b4e8-5ef4-b1a9-bc1f782b5f04  064f3974-d5f3-557c-9a86-1a81fb2f240f  0651c4eb-e20e-5e7d-bb20-6f67cbb7d413  06670dbc-700a-5df8-b784-a3af892248e2  06c0be89-d6e0-5e52-a3e0-7e781ad73c64  (+1254 more)
.streamlit/: config.toml
assistants/research/: assistant.py  event_handler.py  functions.py
output/: output.txt
(+1 files in other folders)
